# toy-shell

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  performance_test.py  pyproject.toml  setup.py  shell.py  test.sh  test_arithmetic.py  test_compatibility.py  test_function.sh  test_function_args.sh  test_new_lexer.py  test_new_parser.py  test_parser_errors.py  test_simple_function.sh  test_simple_parser.py  test_tokens.py  test_variables.sh
design/: ast_implementation_summary.md  brace_expansion_strategy.md  control_structures.md
docs/: advanced_expansion_todo.md  and_or_list_strategy.md  ast_executor_refactoring_plan.md  case_statement_fixes.md  case_statement_usage.md  compatibility_testing.md  dynamic_prompt.md  expander_facade_migration.md  expander_refactoring_plan.md  interactive_vs_script_mode.md  migration_guide.md  parameter_expansion_examples.md  parameter_expansion_test_coverage.md  parser_refactoring_plan.md  pattern_expansion.md  prompt_command.md  shell_features.md  special_variables.md  state_machine_integration.md  state_machine_migration_complete.md  test_command_strategy.md  variable_expansion_optimization.md
docs/architecture/: builtins.md  execution.md  parser.md  (+3 more)
examples/: README.md  and_or_tests.sh  arithmetic.sh  case_demo.sh  control_structures.sh  debug_example.sh  for_loop.sh  if_test.sh  multiline_loops.sh  nested_if_test.sh  simple_arithmetic.sh  simple_if_test.sh  simple_nested_if.sh  test_undefined.sh  var_arithmetic.sh
src/: __init__.py  context.py  shell.py  shell.py~
tests/: conftest.py  test_shell_compatibility.py
(+104 files in other folders)
