[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psh"
dynamic = ["version"]
description = "A feature-rich Unix shell implemented in Python"
authors = [
    {name = "Python Shell Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Shells",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/psh"
"Bug Tracker" = "https://github.com/yourusername/psh/issues"

[project.scripts]
psh = "src.shell:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
psh = ["py.typed"]

[tool.setuptools_scm]
write_to = "src/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "mypy>=0.9",
    "pylint>=2.0",
]